# backend/docs/swagger.yaml
@@ -7,6 +7,11 @@ definitions:
       password:
         type: string
     type: object
+  model.CreateWebsiteRequest:
+    properties:
+      alias:
+        type: string
+    type: object
   model.ErrorResponse:
     properties:
       error:
@@ -80,6 +85,43 @@ paths:
       summary: SingUp admin
       tags:
       - admin
+  /website/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: alias new website
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateWebsiteRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Create website
+      tags:
+      - website
 securityDefinitions:
   ApiKeyAuth:
     in: header
