# backend/internal/app/model/website.go
@@ -1,0 +1,5 @@
+package model
+
+type CreateWebsiteRequest struct {
+	Alias string `json:"alias"`
+}
